syntax = "proto3";

package api.proto.v1;
option go_package = "github.com/a-x-a/gophkeeper/goph;goph";

message RegisterRequest {
  string username = 1; // Name of a user.
  string security_key = 2; // Hashed encryption key generated by client.
}

message RegisterResponse {
  string access_token = 1; // JWT access token.
}

service UsersService {
  // Register new user.
  rpc Register(RegisterRequest) returns (RegisterResponse);
}
